fix: dark mode header button hover

--- a/server/static/style.css
+++ b/server/static/style.css
@@ -143,7 +143,7 @@
     }
 }
 
-.sync-btn, .header-action button {
+.sync-btn, .header-action button img {
     filter: var(--btn-filter);
 }
 
